리소스를 읽을 때 스트림에서 읽도록 수정합니다.